Flynn display fixed on Firefox browser

--- a/src/client/app/flogo.flows/components/flows.component.less
+++ b/src/client/app/flogo.flows/components/flows.component.less
@@ -90,14 +90,15 @@ flogo-flows-import:hover{
 }
 
 .flogo-mascot {
+  min-width: 18em;
   float:left;
   margin-top: 24px;
   object-fit: contain;
 }
 
 .flogo-flows-mascotImg{
-  height: 202.5px;
-  width:  300px;
+  height: 100%;
+  width:  100%;
 }
 
 .flogo-flows-container-header {
